elimino componentes que no ocupo , agrego boton de pago a carro de compras , login funciona , limpio codigo .

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=Aetjn-K8yJBBAMYKwCM0_BPNGd6vYU8iU9Hpcbn49xdIZFT5M8y2LP7Eo34WX8sFAIbEaJCPHWbwtndU&currency=MXN"></script>
   </body>
 </html>
