arreglos varios en estilos , mejoro en torno al feedback de demoday

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css">
+    <!-- <link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AllManga</title>
   </head>
   <body>
     <div id="root"></div>
-    <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
+    <!-- <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" /> -->
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://www.paypal.com/sdk/js?client-id=Aetjn-K8yJBBAMYKwCM0_BPNGd6vYU8iU9Hpcbn49xdIZFT5M8y2LP7Eo34WX8sFAIbEaJCPHWbwtndU&currency=MXN"></script>
   </body>
